--- a/departamentos.html
+++ b/departamentos.html
@@ -49,18 +49,21 @@
 
     <!-- termina navbar -->
  <!-- imagen principal -->
-  <header class="">
-    <div class="text-center">
+
+  <header class="container-fluid mt-2">
+    <div class="row">
+      <div class=""> 
         <img src="./imagenes/departamentos.webp" class="img-fluid" alt="...">
+      </div>
     </div>
-  </header> 
+  </header>
     <!-- imagen principal fin -->
   <main>
     <h1 class="w-50  mx-auto text-center border-top border-3 text-primary pt-3">Departamentos para disfrutar en familia.</h1>
       <p class="w-50 mx-auto text-center fs-5 pt-2">Comodas instalaciones, totalmente equipados, estacionamiento y parrillas incluidas.</p>
     <!-- tarjetas -->
     <div class="container-fluid" id="cards">
-    <div class="row row-cols-1 row-cols-md-4 g-4 p-3 mt-3 bg-light">
+      <div class="row row-cols-1 row-cols-md-4 g-4 p-3 mt-3 bg-light">
         <div class="col-sm-6 col-md-6 col-lg-3" >
           <div class="card h-100 ">
             <img src="imagenes/monoambientesint2.webp" class="card-img-top" alt="..." >
@@ -96,7 +99,7 @@
                 <p class="card-text">This is a wider card wito  than the first to show that equal height action.</p>
               </div>
             </div>
-          </div>
+        </div>
       </div>
     </div>
         
