--- a/galeria.html
+++ b/galeria.html
@@ -45,7 +45,7 @@
       </nav>
     <!-- termina navbar -->
     <main>
-        <div class="container d-flex">
+        <div class="container d-flex galeria">
             <div class="row mt-0 p-0 alinear">
                 <div class="col-md-5 col-lg-3 col-xxl-4 p-0 m-1 ">
                     <img class="imgs" src="imagenes/galeria/galeria1.webp" alt="">
