--- a/monoambientes.html
+++ b/monoambientes.html
@@ -46,9 +46,11 @@
 
     <!-- termina navbar -->
     <!-- imagen principal -->
-      <header class="">
-    <div class="text-center">
+  <header class="container-fluid mt-2">
+    <div class="row">
+      <div class=""> 
         <img src="./imagenes/monoambiente.webp" class="img-fluid" alt="...">
+      </div>
     </div>
   </header> 
     <!-- imagen principal fin -->
