--- a/departamentos.html
+++ b/departamentos.html
@@ -59,10 +59,12 @@
   </header>
     <!-- imagen principal fin -->
   <main>
-    <h1 class="w-50  mx-auto text-center border-top border-3 text-primary pt-3">Departamentos para disfrutar en familia.</h1>
+    <div class=" mt-5 mb-5">
+      <h1 class="w-50  mx-auto text-center  text-primary pt-3">Departamentos para disfrutar en familia.</h1>
       <p class="w-50 mx-auto text-center fs-5 pt-2">Comodas instalaciones, totalmente equipados, estacionamiento y parrillas incluidas.</p>
-    <!-- tarjetas -->
-    <div class="container-fluid" id="cards">
+    </div>
+      <!-- tarjetas -->
+    <div class="container" id="cards">
       <div class="row row-cols-1 row-cols-md-4 g-4 p-3 mt-3 bg-light">
         <div class="col-sm-6 col-md-6 col-lg-3" >
           <div class="card h-100 ">
@@ -105,7 +107,7 @@
         
       <!-- tarjetas -->
       <!-- iframe -->
-    <section class="container h-50">
+    <section class="container h-50 mt-5">
       <div class="row d-flex justify-content-center m-5 ">
         <div class="bg-light text-center card iframes">
           <h4 class="m-3 text-primary">Ubicación-Google Maps.</h2>
