--- a/monoambientes.html
+++ b/monoambientes.html
@@ -55,10 +55,12 @@
   </header> 
     <!-- imagen principal fin -->
   <main>
-    <h1 class="w-50  mx-auto text-center border-top border-3 text-primary pt-3">Monoambientes equipoados para tres personas.</h1>
+    <div class="mt-5 mb-5"> 
+    <h1 class="w-50  mx-auto text-center text-primary pt-3">Monoambientes equipoados para tres personas.</h1>
       <p class="w-50 mx-auto text-center fs-5 pt-2">Excelente ubicación a pocas cuadras del mar, espacio interno y estacionamineto.</p>
-    <!-- tarjetas -->
-    <div class="container-fluid" id="cards">
+    </div>
+      <!-- tarjetas -->
+    <div class="container" id="cards">
     <div class="row row-cols-1 row-cols-md-4 g-4 p-3 mt-3 bg-light">
         <div class="col-sm-6 col-md-6 col-lg-3" >
           <div class="card h-100 ">
